table header alignment fixed for index page

--- a/public/assets/css/mlbtracker_style.css
+++ b/public/assets/css/mlbtracker_style.css
@@ -8,6 +8,12 @@
 }
 
 
+.table-hover{
+
+  text-align: left;
+
+}
+
 .booksTable {
   float:left;
   align-content:center;
